# MachSpec

./: .gitignore  README.md  requirements.txt
machspec/: pyproject.toml
machspec/agents/: tracer.js
machspec/machspec/: main.py
machspec/machspec/auth/: tester.py
machspec/machspec/core/: __init__.py  dynamic_profiler.py  enumerator.py  static_analyzer.py
machspec/machspec/database/: __init__.py  db_manager.py  models.py
machspec/machspec/fuzzer/: __init__.py  engine.py  generator.py  mutator.py
machspec/native/XPCClient/: Package.swift
machspec/native/XPCClient/.build/: build.db  plugin-tools.yaml
machspec/native/XPCClient/.build/arm64-apple-macosx/release/: XPCClient  description.json
machspec/native/XPCClient/.build/arm64-apple-macosx/release/ModuleCache/1CE9MG16SKB3S/: MachO-1E48RKM8MIOQ3.pcm  ObjectiveC-3HFLVFB2XGC12.pcm  SwiftShims-6PVXR3VD9JVP.pcm  _AvailabilityInternal-FOXKIHXXPWT.pcm  _Builtin_float-3PGQF5YETHUX5.pcm  _Builtin_inttypes-3PGQF5YETHUX5.pcm  _Builtin_limits-3PGQF5YETHUX5.pcm  _Builtin_stdarg-3PGQF5YETHUX5.pcm  _Builtin_stdbool-3PGQF5YETHUX5.pcm  _Builtin_stddef-3PGQF5YETHUX5.pcm  (+7 more)
machspec/native/XPCClient/.build/arm64-apple-macosx/release/Modules/: XPCClient.swiftdoc  XPCClient.swiftmodule  XPCClient.swiftsourceinfo
machspec/native/XPCClient/.build/arm64-apple-macosx/release/XPCClient.build/: XPCClient.d  output-file-map.json  sources
machspec/native/XPCClient/.build/arm64-apple-macosx/release/XPCClient.product/: Objects.LinkFileList
machspec/native/XPCClient/Sources/XPCClient/: main.swift
machspec/tests/: test_fuzzer.py
(+61 files in other folders)
